Changed building scripts for to favor modularity and continous integration.
* Fixed modular resolution for test assets in build.gradle;
* Added more tasks to be executed by Travis-CI, in order to improve
  build consistency;
* Updated Gradle Wrapper's version 5.6.2.