@@ -1,5 +1,3 @@
-import java.nio.charset.StandardCharsets
-
 plugins {
     id 'base'
     id 'idea'
@@ -13,12 +11,11 @@ group 'org.queryhub'
 version '0.1.0'
 
 // Should follow wrapper version shipped into this project
-wrapper { gradleVersion = '5.5.1' }
+wrapper { gradleVersion = '5.6.2' }
 
 ext.moduleName = '_'
 
 repositories { mavenCentral() }
-
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:' + junit_version
@@ -33,34 +30,11 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 compileJava {
-
-    options.encoding = StandardCharsets.UTF_8
-    options.incremental = Boolean.TRUE
-
-    inputs.property("moduleName", moduleName)
-    options.compilerArgs = [
-            '--module-path', classpath.asPath,
-    ]
-    classpath = files()
-}
-
-test {
-
-    exclude { 'module-info.java' }
-
-    failFast = Boolean.TRUE
-    testLogging.showStandardStreams = Boolean.TRUE
-    testLogging.exceptionFormat = 'full'
-
-    useJUnitPlatform()
-
     inputs.property("moduleName", moduleName)
     doFirst {
-        jvmArgs = [
+        options.compilerArgs = [
                 '--module-path', classpath.asPath,
-                '--add-modules', 'ALL-MODULE-PATH',
-                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir,
-                sourceSets.test.resources.srcDirs).asPath]
+        ]
         classpath = files()
     }
 }
@@ -70,16 +44,23 @@ compileTestJava {
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
+                '--add-modules', 'org.junit.jupiter.api',
+                '--add-reads', "$moduleName=org.junit.jupiter.api",
                 '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
         ]
         classpath = files()
     }
 }
 
+test {
+    useJUnitPlatform()
+    filter { exclude '**/module-info.class' }
+}
+
 jar {
     inputs.property("moduleName", moduleName)
     manifest {
         attributes 'Main-Class': 'org.queryhub.Query'
-        attributes('Automatic-Module-Name': moduleName)
+        attributes 'Automatic-Module-Name': moduleName
     }
 }
